--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -45,6 +47,9 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.52.1"
+    "@supabase/supabase-js": "^2.52.1",
+    "dotenv": "^17.2.1",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
