--- a/package.json
+++ b/package.json
@@ -48,9 +48,6 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.52.1",
-    "axios": "^1.11.0",
-    "dotenv": "^17.2.1",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "axios": "^1.11.0"
   }
 }
